--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "mongoose": "^8.16.2",
+    "mongoose-unique-validator": "^4.0.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
