--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon index.js",
     "build:ui": "rm -rf dist && cd ../phonebook-frontend && npm run build && cp -r dist ../phonebook-backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m 'uibuild' && git push origin main",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,13 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.3.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "eslint": "^9.31.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-import": "^2.32.0",
+    "globals": "^16.3.0",
     "nodemon": "^3.1.10"
   }
 }
